Fix scrollbar intersection

--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -15,16 +15,23 @@ body {
         width: 12px;
         height: 12px;
 }
-      
+
 ::-webkit-scrollbar-track {
         background-color: #0a0e12;
 }
-      
+
 ::-webkit-scrollbar-thumb {
-        background: #1b222b;
+	background-color: #1b222b;
+
         &:hover {
-                background: #232a36ff;
+			background-color: #232a36;
         }
+		&:active{
+			background-color: #293240;
+		}
+}
+::-webkit-scrollbar-corner {
+	background-color: #0a0e12;
 }
 
 #root {
